--- a/Geometry/Geometry.vcxproj.filters
+++ b/Geometry/Geometry.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="headers\Matrix4x4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="headers\RealPoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Point.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Matrix4x4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\RealPoint.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
