--- a/MeshSegmentation/MeshSegmentation.vcxproj.filters
+++ b/MeshSegmentation/MeshSegmentation.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="src\Utilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\GraphicsSynchronizer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\Surface.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="headers\OpenglWidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="headers\GraphicsSynchronizer.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
